--- a/app/less/config.less
+++ b/app/less/config.less
@@ -13,7 +13,7 @@
 @font_family_topic  : 'maledpan';
 
 // http://www.color-hex.com/color/21ce99
-@primary_color      :#4095C8; // Active Color
+@primary_color      :#2962FF; // Active Color
 @primary_color_dark :#3581C2;
 @primary_color_light:#64BEE3;
 
